--- a/src/App.css
+++ b/src/App.css
@@ -14,21 +14,71 @@
   border: 1px;
   box-shadow: 0px 0px 9px 3px rgba(255, 255, 255, 1);
   border-radius: 4px;
+  padding-bottom: 8px;
 }
 
-.languagues-list{
+.languagues-list {
   margin: auto;
   width: fit-content;
   display: flex;
   flex-wrap: wrap;
 }
 
-textarea{
+textarea {
+  padding: 8px;
   width: 100%;
   height: 500px;
+  border: 2px solid rgb(49, 48, 48);
+  border-radius: 6px;
 }
-.translated-text{
-  width: 100%;
-  border: 1px solid greenyellow;
+
+label {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+
+.translated-text {
+  margin: 12px 12px;
   padding: 8px;
+  width: 98%;
+  position: relative;
+  /* border: 2px solid; */
+  background-color: white;
+  /* border-image: linear-gradient(to right, darkblue, darkorchid) 1; */
+}
+
+.translated-text::after {
+  content: "";
+  background: linear-gradient(to right, darkblue, darkorchid);
+  display: block;
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  width: calc(100% + 8px);
+  height: calc(100% + 8px);
+  z-index: -1;
+  border-radius: 4px;
+}
+
+button {
+  display: block;
+  margin: 8px auto;
+  margin-bottom: 24px;
+  font-size: 1.25rem;
+  padding: 10px 30px;
+  font-family: sans-serif;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  box-shadow: 4px 4px 3px #170b58;
+  background: linear-gradient(103deg, #0eeaec 15.05%, #1f8ad6 114.99%) padding-box, linear-gradient(164deg, #0eeaec 15.05%, #1f92d6 114.99%) border-box;
+}
+
+button:hover {
+  background: linear-gradient(257deg, #0eeaec 15.05%, #1f8ad6 114.99%) padding-box, linear-gradient(344deg, #0eeaec 15.05%, #1f92d6 114.99%) border-box;
+}
+
+button:active {
+  background: linear-gradient(257deg, #0cd5d8 15.05%, #1b7bc0 114.99%) padding-box, linear-gradient(344deg, #0cd5d8 15.05%, #1b7bc0 114.99%) border-box;
+  box-shadow: 2px 2px 3px #170b58;
 }
