--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 html,
 body {
   min-height: 100vh;
@@ -10,7 +13,7 @@ body {
 }
 
 .row {
-  margin: 4px;
+  margin: 8px;
   display: flex;
   justify-content: center;
   /* width: 100%; */
